
  [ Josh Holland ]
  * Fixed several typos (LP: #93804, LP: #277731, LP: #404435)
  
  [ Rugby471 ]
  * Center window on the screen (LP: #423355)
  
  [ Michael Vogt ]
  * DistUpgrade/DistUpgrade.ui:
    - remove unused "destroy_event" handler (LP: #428842)
  * DistUpgrade/DistUpgradeQuirks.py:
    - make ARMv6 error message clearer (LP: #409523)

 -- Josh Holland <jrh@joshh.co.uk>  Sun, 06 Sep 2009 11:34:11 +0100

update-manager (1:0.125) karmic; urgency=low

  [ Michael Vogt ]
  * integrate base-installer as a sub-component into the
    release upgrader and use the base-installer/kernel/*.sh
    functionality to ensure we select the most appropriate
    kernel on upgrade (LP: #353545)
  * integrate automatic updates to base-installer into the
    pre-build.sh bzr hook
  * UpdateManager/Core/UpdateList.py, UpdateManager/UpdateManager.py:
    - filter warnings
  * UpdateManager/SimpleGtkbuilderApp.py:
    - use logging instead of sys.stderr
  * data/glade/UpdateManager.ui:
    - set explicit translation domain
  * integrate base-installer component into auto-upgrade-tester
  
  [ Steve Langasek ]
  * Refresh .pot file (and .po files) so that new UI strings are available
    for translation in LP.  LP: #425014.

 -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 11 Sep 2009 20:07:20 +0200

update-manager (1:0.124.11) karmic; urgency=low

  * DistUpgrade/DistUpgradeView.py:
    - capture exceptions from pm.DoInstall() properly (fixes a 
      hang when a package fails to install)
  * DistUpgrade/DistUpgradeViewGtk.py, DistUpgrade/DistUpgradeViewKDE.py:
    - return the full status of the exited child, not only the
      return code

 -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 04 Sep 2009 10:57:06 +0200

update-manager (1:0.124.10) karmic; urgency=low

  * DistUpgrade/removal_blacklist.cfg:
    - add update-manager so that it does not 
  * typo fixes (thanks to Brian Murray, LP: #418127)
  * merge the changes of seb128 into bzr
  * po/POTFILES.in: