@@ -11,6 +11,11 @@ update-manager (1:0.125.1) UNRELEASEDkarmic; urgency=low
     - remove unused "destroy_event" handler (LP: #428842)
   * DistUpgrade/DistUpgradeQuirks.py:
     - make ARMv6 error message clearer (LP: #409523)
+  * UpdateManager/Core/MetaRelease.py:
+    - more robustness for invalid configuration of the meta-release
+      file (LP: #428558)
+    - more robustness if the server sends invalid meta-release data
+
 
  -- Josh Holland <jrh@joshh.co.uk>  Sun, 06 Sep 2009 11:34:11 +0100
 
